<resources>
    <string name="app_name">WeekDays</string>
    <string name="string_radio_recview">RecView</string>
    <string name="string_radio_pager">Pager</string>
    <string name="string_radio_notify">Notify</string>

    <string name="name_monday">Monday</string>
    <string name="name_tuesday">Tuesday</string>
    <string name="name_wednesday">Wednesday</string>
    <string name="name_thursday">Thursday</string>
    <string name="name_friday">Friday</string>
    <string name="name_saturday">Saturday</string>
    <string name="name_sunday">Sunday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_notification_button">Notification</string>
    <string name="text_toast_button">Toast</string>
    <string name="text_snackbar_button">Snackbar</string>
    <string name="notification_title">notification</string>
</resources>
