<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.havayi.weekdays.activities.MainActivity">


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <RadioButton
            android:id="@+id/radio_recview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_radio_recview"
            android:textSize="@dimen/size_radio_text"
            android:layout_margin="@dimen/margin_small"
            android:gravity="center"
            android:button="@android:color/transparent"
            android:background="@drawable/background_radio_button"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/radio_pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_radio_pager"
            android:gravity="center"
            android:textSize="@dimen/size_radio_text"
            android:layout_margin="@dimen/margin_small"
            android:button="@android:color/transparent"
            android:background="@drawable/background_radio_button"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/radio_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_radio_notify"
            android:layout_margin="@dimen/margin_small"
            android:textSize="@dimen/size_radio_text"
            android:gravity="center"
            android:button="@android:color/transparent"
            android:background="@drawable/background_radio_button"
            android:layout_weight="1"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_layout">

    </FrameLayout>
</LinearLayout>
